fixed background image not covering whole page

--- a/styles/landing.module.css
+++ b/styles/landing.module.css
@@ -1,6 +1,6 @@
 .container{
-    
     background-image: url(../public/background-field.png);
+    background-size:cover;
     padding: 15.5rem;
 }
 
